fix jumping panel due to centering on page

--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -303,8 +303,7 @@ a:active {
 }
 
 #githubActionsUI.githubActionsCentered {
-  top: 50%;
-  transform: translateY(-50%);
+  top: 20%;
 }
 
 #githubActionsUI a {
